--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^2.1.1",
     "live-server": "^1.2.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^20.2.3",
     "react-dom": "^16.8.6",
     "react-modal": "^3.8.1",
     "react-redux": "^7.1.0",
